--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,7 +16,7 @@
 @media only screen and (max-width: 767px) {
   body {
     /* Dark gradient background theme */
-    height: 100vh !important;
+    height: 130vh !important;
     background-color: #000000 !important;
     background-image: linear-gradient(147deg, #000000 0%, #434343 74%) !important;
   }
